--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LAVPRONTO S.A.C.</title>
+  <title>LAVIPRONTO S.A.C</title> 
   <link rel="stylesheet" href="assets/styles/style.css">
+  <!-- Add icon library for the social media buttons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header id="main-header">
@@ -19,31 +21,154 @@
     </div>
     <nav>
       <ul id="menu">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Nosotros</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
         <li><a href="#">Trabaja con Nosotros</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Hero section with animated text -->
   <section id="hero">
     <div class="hero-content">
       <h1 class="animate-text">LAVIPRONTO S.A.C</h1>
       <p>DEJA LA LAVANDERÍA EN NUESTRAS MANOS</p>
     </div>
+    <div class="bubbles"></div> <!-- Este contenedor debe estar aquí -->
   </section>
 
-  <section id="second-section">
-    <div class="second-content">
-      <h2>Bienvenidos a nuestra lavandería</h2>
-      <p>Proporcionamos el mejor servicio en la ciudad</p>
+  <!-- Separator 1 with water drop effect -->
+<section id="separator1" class="water-effect">
+  <div class="water-drop"></div>
+  <h2>¿Tu lavandería te hace perder tiempo valioso?</h2>
+  <p>Entendemos lo valioso que es cada minuto. Nos encargamos del resto.</p>
+</section>
+
+  <!-- Separator 2 -->
+  <section id="separator2" class="services-section">
+    <div class="service-card">
+      <div class="service-label">TOP</div>
+      <h3>Uniformidad Empresarial Asegurada</h3>
+      <p>Tus empleados se presentarán con una imagen profesional día tras día, gracias a nuestro meticuloso proceso de lavado.</p>
+      <div class="service-icon">
+        <img src="assets/icons/uniform-icon.png" alt="Uniforme Icono">
+      </div>
+    </div>
+  
+    <div class="service-card">
+      <div class="service-label">24hs</div>
+      <h3>Servicio Óptimo para Airbnb</h3>
+      <p>Nos ajustamos al ritmo de tus reservas, garantizando que cada cambio de huésped sea sinónimo de frescura y limpieza.</p>
+      <div class="service-icon">
+        <img src="assets/icons/airbnb-icon.png" alt="Airbnb Icono">
+      </div>
+    </div>
+  
+    <div class="service-card">
+      <div class="service-label">VIP</div>
+      <h3>Especialistas en Hotelería</h3>
+      <p>Entregamos blancura inmaculada y confort en cada toalla y sábana, asegurando la calidad en cada servicio.</p>
+      <div class="service-icon">
+        <img src="assets/icons/hotel-icon.png" alt="Hotel Icono">
+      </div>
+    </div>
+  
+    <div class="service-card">
+      <div class="service-label">24hs</div>
+      <h3>Excelencia para Spas</h3>
+      <p>Renueva la sensación de lujo con toallas impecables, brindando a tus clientes un ambiente de relajación pura.</p>
+      <div class="service-icon">
+        <img src="assets/icons/spa-icon.png" alt="Spa Icono">
+      </div>
+    </div>
+  
+    <div class="service-card">
+      <div class="service-label">VIP</div>
+      <h3>Máxima Higiene para Clínicas</h3>
+      <p>Cuidamos cada pieza con la precisión que el sector de la salud exige.</p>
+      <div class="service-icon">
+        <img src="assets/icons/clinic-icon.png" alt="Clínica Icono">
+      </div>
+    </div>
+  
+    <div class="service-card">
+      <div class="service-label">TOP</div>
+      <h3>Otros negocios y necesidades</h3>
+      <p>Nos adaptamos a cualquier industria con servicios a medida para garantizar la mejor imagen de tu empresa.</p>
+      <div class="service-icon">
+        <img src="assets/icons/other-icon.png" alt="Negocios Icono">
+      </div>
+    </div>
+  </section>
+  
+  <!-- Separator 3 -->
+  <section id="separator3" class="faq-section">
+    <div class="faq">
+      <h2>Preguntas Frecuentes</h2>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 1</button>
+        <div class="faq-answer">
+          <p>respuesta1</p>
+          <img src="assets/icons/payment-icons.png" alt="Métodos de pago">
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 2</button>
+        <div class="faq-answer">
+          <p>respuesta2</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 3</button>
+        <div class="faq-answer">
+          <p>respuesta3</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 4</button>
+        <div class="faq-answer">
+          <p>respuesta4</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 5</button>
+        <div class="faq-answer">
+          <p>respuesta5</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">pregunta 6</button>
+        <div class="faq-answer">
+          <p>respuesta6</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Contenedor de las burbujas -->
-  <div class="bubbles"></div>
+
+  <!-- Footer with social media buttons -->
+  <footer>
+    <div class="social-media">
+      <a href="https://www.facebook.com/" target="_blank" class="social-icon">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="social-icon">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a href="mailto:youremail@example.com" target="_blank" class="social-icon">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+    <p>&copy; LAVIPRONTO SAC</p>
+  </footer>
 
   <script src="assets/scripts/script.js"></script>
 </body>
