--- a/contacto.html
+++ b/contacto.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lavandería Industrial - Contacto</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/styles/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navbar">
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <ul class="menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">Trabaja con Nosotros</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="contact">
-        <h1>Contáctanos</h1>
-        <p>Teléfono: (555) 123-4567</p>
-        <p>Email: info@lavanderiaindustrial.com</p>
+      <h1>Contáctanos</h1>
+      <p>Teléfono: +51 999999999</p>
+      <p>Email: info@lavanderiaindustrial.com</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
+      <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
     </footer>
 
     <script src="assets/scripts/script.js"></script>
-</body>
+  </body>
 </html>
