--- a/nosotros.html
+++ b/nosotros.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lavandería Industrial - Nosotros</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/styles/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navbar">
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <ul class="menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">Trabaja con Nosotros</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="about">
-        <h1>Sobre Nosotros</h1>
-        <p>Con más de 20 años de experiencia, ofrecemos un servicio confiable y profesional para la industria textil.</p>
+      <h1>Sobre Nosotros</h1>
+      <p>
+        Con más de 20 años de experiencia, ofrecemos un servicio confiable y
+        profesional para la industria textil.
+      </p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
+      <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
     </footer>
 
     <script src="assets/scripts/script.js"></script>
-</body>
+  </body>
 </html>
