--- a/contacto.html
+++ b/contacto.html
@@ -1,32 +1,158 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lavandería Industrial - Contacto</title>
-    <link rel="stylesheet" href="assets/styles/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">Trabaja con Nosotros</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LAVIPRONTO S.A.C</title> 
+  <link rel="stylesheet" href="assets/styles/style.css">
+  <!-- Add icon library for the social media buttons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+  <header id="main-header">
+    <div class="logo">
+      <img src="assets/image/logo.png" alt="Logo Lavandería Prestigiosa">
+    </div>
+    <!-- Menú hamburguesa -->
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav>
+      <ul id="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
 
-    <section class="contact">
-      <h1>Contáctanos</h1>
-      <p>Teléfono: +51 999999999</p>
-      <p>Email: info@lavanderiaindustrial.com</p>
+      </ul>
+    </nav>
+  </header>
+    <!-- Sección Hero -->
+    <section id="hero" class="store-section">
+      <div class="store-container">
+        <div class="store-text">
+          <h1>LAVIPRONTO TE ESPERA CON MUCHAS ANSIAS</h1>
+          <p>
+            Deja la lavandería en nuetras manos
+          </p>
+          <div class="store-details">
+            <p><strong>Horario de Atención:</strong><br />
+              Lunes - Sábado: 9:30 - 19:45
+            </p>
+            <p><strong>Dirección:</strong><br />
+              Direccion
+            </p>
+          </div>
+        </div>
+        <div class="store-map">
+          <!-- Mapa de Google Maps con marcador -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.540740304938!2d-77.0585673!3d-12.0865276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c7b6b5dcee5f%3A0x7b0e0b946a9a0c23!2sAv.%20Ricardo%20Tiz%C3%B3n%20y%20Bueno%20580%2C%20Jes%C3%BAs%20Mar%C3%ADa%2015066%2C%20Per%C3%BA!5e0!3m2!1ses!2ses!4v1632155659614!5m2!1ses!2ses"
+            width="100%"
+            height="300"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+          <div class="map-button">
+            <a href="https://www.google.com/maps/dir/?api=1&destination=-13.709547888035882, -76.21422339130949" target="_blank" class="btn">
+              Cómo llegar
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
+
+    <!-- Sección de servicios -->
+    <section class="services-section">
+      <div class="service-card">
+        <span class="service-label">Servicio 1</span>
+        <h3>Lavado Industrial</h3>
+        <p>
+          Brindamos servicios de lavado industrial con los más altos estándares
+          de calidad.
+        </p>
+      </div>
+      <div class="service-card">
+        <span class="service-label">Servicio 2</span>
+        <h3>Planchado Profesional</h3>
+        <p>
+          Servicio de planchado profesional para mantener tu ropa impecable.
+        </p>
+      </div>
+      <div class="service-card">
+        <span class="service-label">Servicio 3</span>
+        <h3>Lavado en Seco</h3>
+        <p>Lavado en seco para prendas delicadas y tejidos especiales.</p>
+      </div>
+    </section>
+
+
+    
+    <!-- Footer -->
     <footer>
-      <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
+      <div class="footer-container">
+        <div class="footer-section logo-section">
+          <img src="assets/image/logo.png" alt="Logo" class="footer-logo" />
+          <p>Conéctate con nosotros</p>
+          <div class="social-media">
+            <a
+              href="mailto:youremail@example.com"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fas fa-envelope"></i>
+            </a>
+            <a
+              href="https://wa.me/yourwhatsappnumber"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h4>Nuestros Productos</h4>
+          <ul>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Ayuda</h4>
+          <ul>
+            <li><a href="#">opcion 1</a></li>
+            <li><a href="#">opcion 2</a></li>
+            <li><a href="#">opcion 3</a></li>
+            <li><a href="#">opcion 4</a></li>
+          </ul>
+        </div>
+        <div class="footer-section help-section">
+          <h4>Métodos de Pago</h4>
+          <img
+            src="assets/image/payment-methods.png"
+            alt="Métodos de Pago"
+            class="payment-img"
+          />
+        </div>
+      </div>
     </footer>
 
     <script src="assets/scripts/script.js"></script>
