--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       <ul id="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="#">Servicios</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
         <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="#">Trabaja con Nosotros</a></li>
       </ul>
     </nav>
   </header>
@@ -156,18 +155,49 @@
 
   <!-- Footer with social media buttons -->
   <footer>
-    <div class="social-media">
-      <a href="https://www.facebook.com/" target="_blank" class="social-icon">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="social-icon">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <a href="mailto:youremail@example.com" target="_blank" class="social-icon">
-        <i class="fas fa-envelope"></i>
-      </a>
+    <div class="footer-container">
+      <div class="footer-section logo-section">
+        <img src="assets/image/logo.png" alt="Logo" class="footer-logo">
+        <p>Conéctate con nosotros</p>
+        <div class="social-media">
+          <a href="mailto:youremail@example.com" target="_blank" class="social-icon">
+            <i class="fas fa-envelope"></i>
+          </a>
+          <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="social-icon">
+            <i class="fab fa-whatsapp"></i>
+          </a>
+          <a href="https://www.facebook.com/" target="_blank" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h4>Nuestros Productos</h4>
+        <ul>
+          <ul>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Ayuda</h4>
+          <ul>
+            <li><a href="#">opcion 1</a></li>
+            <li><a href="#">opcion 2</a></li>
+            <li><a href="#">opcion 3</a></li>
+            <li><a href="#">opcion 4</a></li>
+          </ul>
+      </div>
+      <div class="footer-section help-section">
+        <h4>Métodos de Pago</h4>
+        <img src="assets/image/payment-methods.png" alt="Métodos de Pago" class="payment-img">
+      </div>
     </div>
-    <p>&copy; LAVIPRONTO SAC</p>
   </footer>
 
   <script src="assets/scripts/script.js"></script>
