--- a/nosotros.html
+++ b/nosotros.html
@@ -5,32 +5,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lavandería Industrial - Nosotros</title>
     <link rel="stylesheet" href="assets/styles/style.css" />
+      <!-- Add icon library for the social media buttons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
+    <!-- Header -->
     <header>
-      <nav class="navbar">
-        <ul class="menu">
+      <div class="logo">
+        <img src="assets/image/logo.png" alt="Logo Lavandería Industrial" />
+      </div>
+      <nav>
+        <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="#">Servicios</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">Trabaja con Nosotros</a></li>
         </ul>
       </nav>
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </header>
-
-    <section class="about">
-      <h1>Sobre Nosotros</h1>
-      <p>
-        Con más de 20 años de experiencia, ofrecemos un servicio confiable y
-        profesional para la industria textil.
-      </p>
+    <!-- Sección Sobre Nosotros actualizada -->
+    <section id="hero">
+      <div class="hero-container">
+        <div class="hero-text">
+          <h1>titulo "el lavado al seco"</h1>
+          <p>
+            pwpw lw pu.
+          </p>
+          <p>
+            plopole.
+          </p>
+        </div>
+        <div class="hero-image">
+          <img
+            src="assets/images/image.png"
+            alt="imagen 0"
+          />
+        </div>
+      </div>
     </section>
 
+    <!-- Segunda sección con descripción más detallada actualizada -->
+    <section id="second-section">
+      <div class="second-container">
+        <div class="second-image">
+          <img
+            src="assets/images/image.png"
+            alt="imagen 1"
+          />
+        </div>
+        <div class="second-text">
+          <h2>Quiénes somos</h2>
+          <p>
+            unos cracks
+          </p>
+          <h3>Estamos disponibles en todo Frisco</h3>
+          <p>
+           lelelelele
+          </p>
+          <h3>Protegemos nuestro medio ambiente</h3>
+          <p>
+            blublublue ble
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Sección Conoce al Equipo -->
+    <section id="team-section">
+      <div class="team-intro">
+        <h2>Conoce al equipo</h2>
+        <p>
+          texto sobre el equipo
+        </p>
+        <h3>EQUIPO LAVI</h3>
+      </div>
+      <div class="team-gallery">
+        <div class="team-photo">
+          <img src="assets/images/image1.png" alt="Equipo 1" />
+        </div>
+        <div class="team-photo">
+          <img src="assets/images/image2.png" alt="Equipo 2" />
+        </div>
+        <div class="team-photo">
+          <img src="assets/images/image3.png" alt="Equipo 3" />
+        </div>
+        <div class="team-photo">
+          <img src="assets/images/image4.png" alt="Equipo 4" />
+        </div>
+        <div class="team-photo">
+          <img src="assets/images/image5.png" alt="Equipo 5" />
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
     <footer>
-      <p>&copy; 2024 Lavandería Industrial. Todos los derechos reservados.</p>
+      <div class="footer-container">
+        <div class="footer-section logo-section">
+          <img src="assets/image/logo.png" alt="Logo" class="footer-logo">
+          <p>Conéctate con nosotros</p>
+          <div class="social-media">
+            <a href="mailto:youremail@example.com" target="_blank" class="social-icon">
+              <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="social-icon">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+        <div class="footer-section">
+          <h4>Nuestros Productos</h4>
+          <ul>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+            <li><a href="#">opcion</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Ayuda</h4>
+          <ul>
+            <li><a href="#">opcion 1</a></li>
+            <li><a href="#">opcion 2</a></li>
+            <li><a href="#">opcion 3</a></li>
+            <li><a href="#">opcion 4</a></li>
+          </ul>
+        </div>
+        <div class="footer-section help-section">
+          <h4>Métodos de Pago</h4>
+          <img src="assets/image/payment-methods.png" alt="Métodos de Pago" class="payment-img">
+        </div>
+      </div>
     </footer>
-
+    
     <script src="assets/scripts/script.js"></script>
   </body>
 </html>
